--- a/Formularios-Inputs/style.css
+++ b/Formularios-Inputs/style.css
@@ -2,6 +2,7 @@
 
 
 body{
+    display: flexbox;
     background-color: antiquewhite;
     font-family: "Oswald";
 }
@@ -18,6 +19,7 @@ body{
     display: inline;
 }
 #linkedin-img{
+    margin-left: 10px;
     height: 3vh;
 }
 
@@ -53,8 +55,8 @@ a{
 #flavor-form{
     background-color: aquamarine;
     border-radius: 5px;
-
 }
+
 
 input{
     border: none;
@@ -65,4 +67,5 @@ input{
 footer{
     display: flex;
     justify-content: center;
+    align-content: end;
 }
